Offscreen a11y test fix

--- a/lms/static/sass/elements/_program-card.scss
+++ b/lms/static/sass/elements/_program-card.scss
@@ -2,7 +2,7 @@
   @include left(0);
   display: inline-block;
   position: absolute;
-  top: -1000px;
+  top: -999999px;
   overflow: hidden;
 }
 
